jenkins/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins-server
spec:
  type: NodePort 
  selector:
    app: jenkins
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080
