jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins-server
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/allow-shared-secret: "true" 
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jenkinsui.ayyarsachin.shop
    secretName: wildcard-tls-secret
  rules:
  - host: jenkinsui.ayyarsachin.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 80
